# mykvm

./: CHANGELOG.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.mjs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_compatibility.yml  setup_help.yml
.github/workflows/: ci.yml  release.yml
docs/: linux-input-support-plan.md
docs/superpowers/plans/: 2026-07-13-bate-preview-updater.md
docs/superpowers/specs/: 2026-07-13-balanced-input-sync-reliability-design.md  2026-07-13-bate-preview-updater-design.md
public/: edge-drop.html  file-drop-landing.html
scripts/: build-tauri-assets.mjs
src/: App.css  App.tsx  constants.ts  defaultLayout.ts  desktopApi.ts  hotkeyInput.ts  i18n.ts  index.css  layout.ts  runtime.ts  types.ts
src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.windows.conf.json  windows-test.manifest
src-tauri/examples/: single_instance.rs
src-tauri/input-helper/: Cargo.toml
src-tauri/input-helper/src/: main.rs
src-tauri/src/: clipboard.rs  input.rs  lib.rs  linux_input.rs  performance.rs  quic_transport.rs  shared_input.rs  windows_drag.rs  windows_drop_catcher.rs  windows_input.rs
